--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-
 spring.application.name=demo2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+
+spring.datasource.url=jdbc:mysql://localhost:3306/base
+spring.datasource.username=root
 spring.datasource.password=
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.sql.init.mode=always
-server.port=8080
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
