--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
         <artifactId>h2</artifactId>
         <version>2.1.214</version>
     </dependency>
+<!-- este bloque sirve para habilitar swagger y generar la documentacion visual de la api-->
+	<dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.1.0</version>
+    </dependency>
+
+
 
 	</dependencies>
 
